apps/forgejo/k8s/app.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forgejo
  namespace: default
spec:
  # hostPath-каталоги нельзя монтировать в два пода одновременно.
  strategy:
    type: Recreate
  revisionHistoryLimit: 2
  replicas: 1
  selector:
    matchLabels:
      app: forgejo
  template:
    metadata:
      labels:
        app: forgejo
    spec:
      containers:
        - name: forgejo
          image: "data.forgejo.org/forgejo/forgejo:16-rootless@sha256:23ccc146e6dc2cd1f5c5435909baae64db873201717f1726490dae649283e6cd"
          ports:
            - name: http
              containerPort: 3000
            - name: ssh
              containerPort: 2222
          startupProbe:
            httpGet:
              path: /api/healthz
              port: http
            initialDelaySeconds: 15
            periodSeconds: 10
            failureThreshold: 30
          livenessProbe:
            httpGet:
              path: /api/healthz
              port: http
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /api/healthz
              port: http
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 3
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            seccompProfile:
              type: RuntimeDefault
          resources:
            requests:
              cpu: 20m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 768Mi
          volumeMounts:
            - name: data
              mountPath: /var/lib/gitea
      volumes:
        - name: data
          hostPath:
            path: /storage/apps/forgejo/data
            type: Directory
