apps/forgejo/k8s/db.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: forgejo-db
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: forgejo-db
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
      protocol: TCP
