apps/forgejo/k8s/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: forgejo
  namespace: forgejo
spec:
  parentRefs:
    - name: homelab
      namespace: traefik
  hostnames:
    - forgejo.biplane.v6.rocks
    - forgejo.biplane.casa
  rules:
    - backendRefs:
        - name: forgejo-http
          port: 80
